# deskoryn

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml
crates/audio/: Cargo.toml
crates/audio/src/: cpal_backend.rs  jitter.rs  lib.rs  platform.rs  reframe.rs  wasapi_loopback.rs
crates/clipboard/: Cargo.toml
crates/clipboard/src/: filelist.rs  lib.rs  platform.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  geometry.rs  ids.rs  input.rs  layout.rs  lib.rs  trust.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: arrange.rs  audio.rs  clipboard.rs  control.rs  diag.rs  focus.rs  input.rs  ipc.rs  main.rs  monitors.rs  pair.rs  pairing.rs  session.rs  supervisor.rs  transfer.rs
crates/filexfer/: Cargo.toml
crates/filexfer/src/: lib.rs  manifest.rs  progress.rs  sink.rs  sync.rs
crates/input/: Cargo.toml
crates/input/src/: hotkey.rs  keymap.rs  lib.rs  monitors.rs  platform.rs
crates/net/: Cargo.toml
crates/net/src/: discovery.rs  lib.rs  pairing.rs  quic.rs  transport.rs
crates/net/tests/: pairing.rs  quic_session.rs
crates/proto/: Cargo.toml
crates/proto/src/: framing.rs  lib.rs  message.rs
docs/: ARCHITECTURE.md  CONFIG.md  OS_PROBLEMS.md  PROTOCOL.md  REFERENCES.md  ROADMAP.md  SECURITY.md  UI.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs
packaging/: README.md
packaging/systemd/: deskoryn.service
packaging/udev/: 99-deskoryn.rules
scripts/: build-opus-mingw.sh  build-release.sh  gui.sh
ui/: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
ui/src/: api.js  arranger.rs  daemon.rs  ipc.rs  main.js  main.rs  styles.css  ui.js
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: daemon.rs  ipc.rs  lib.rs  main.rs
ui/src/screens/: arranger.js  connection.js  devices.js  settings.js  status.js  transfers.js
