[package]
name = "deskoryn-audio"
description = "Low-latency audio forwarding (Opus over QUIC datagrams) between machines, with PipeWire/WASAPI backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Real codec + OS audio backends, off by default.
opus = []            # dep:audiopus / opus
linux-backend = []   # PipeWire capture/playback + virtual sink
windows-backend = [] # WASAPI loopback capture / render

[dependencies]
deskoryn-core.workspace = true
deskoryn-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
