[package]
name = "deskoryn-clipboard"
description = "Global clipboard synchronization (text, images, file lists) across machines."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# A real OS clipboard via `arboard` (cross-platform: X11/Wayland, Windows,
# macOS). Both per-OS feature names map to it. `image` handles RGBA<->PNG for
# the image format.
linux-backend = ["dep:arboard", "dep:image"]
windows-backend = ["dep:arboard", "dep:image"]

[dependencies]
deskoryn-core.workspace = true
deskoryn-proto.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
arboard = { version = "3", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
