[package]
name = "deskoryn-daemon"
description = "The Deskoryn background service: orchestrates transport, the cursor focus state machine, and the feature modules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "deskorynd"
path = "src/main.rs"

[features]
default = []
# Convenience meta-features to turn on real backends for a real build.
linux = ["deskoryn-net/full", "deskoryn-input/linux-backend", "deskoryn-clipboard/linux-backend", "deskoryn-audio/linux-backend"]
windows = ["deskoryn-net/full", "deskoryn-input/windows-backend", "deskoryn-clipboard/windows-backend", "deskoryn-audio/windows-backend"]
# Opt-in real Opus codec (needs libopus / pkg-config at build time).
audio-opus = ["deskoryn-audio/opus"]

[dependencies]
deskoryn-core.workspace = true
deskoryn-proto.workspace = true
deskoryn-net.workspace = true
deskoryn-input.workspace = true
deskoryn-clipboard.workspace = true
deskoryn-filexfer.workspace = true
deskoryn-audio.workspace = true

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
bytes.workspace = true

[dev-dependencies]
async-trait.workspace = true
