[package]
name = "deskoryn-input"
description = "Input capture and injection abstraction with Linux (libei/evdev/uinput, X11) and Windows (Raw Input/SendInput) backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Enable real OS backends. Off by default so the trait surface + a no-op backend
# compile everywhere (CI, the other platform, dry-run).
linux-backend = ["dep:evdev"]
windows-backend = []

[dependencies]
deskoryn-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# Linux input: evdev capture (/dev/input) + uinput injection. Pure-Rust; needs
# device permissions at runtime (input group / udev rule). See docs/OS_PROBLEMS.md.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", optional = true, features = ["tokio"] }

# Windows backend (Raw Input + SendInput) would be wired here, gated by
# `windows-backend`; it cannot be compiled on a Linux host without the target:
# [target.'cfg(target_os = "windows")'.dependencies]
# windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse"], optional = true }
