[package]
name = "deskoryn-input"
description = "Input capture and injection abstraction with Linux (libei/evdev/uinput, X11) and Windows (Raw Input/SendInput) backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
# Enable real OS backends. Off by default so the trait surface + a no-op backend
# compile everywhere (CI, the other platform, dry-run).
linux-backend = ["dep:evdev"]
windows-backend = ["dep:windows"]

[dependencies]
deskoryn-core.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true

# Linux input: evdev capture (/dev/input) + uinput injection. Pure-Rust; needs
# device permissions at runtime (input group / udev rule). See docs/OS_PROBLEMS.md.
[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", optional = true, features = ["tokio"] }

# Windows backend: low-level hooks (capture + suppression) + SendInput (inject).
# Optional + target-gated so a Linux host never pulls it in; enable with the
# `windows-backend` feature when building/cross-compiling for Windows.
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", optional = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
] }
